@@ -37,3 +37,4 @@
 *Fixed corals destroying themselves when spreading
 *Changed dinosaurs drinking AI to rely more on their mental features
 *Fixed wrong T. Rex skull rotation
+*Fixed Helicopter graphical glitch in water
